--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HTML, Doctype, Head, Body, Meta, Paragraph, Headings, Strong, Emphasis">
     <meta name="author" content="Lucas Jurgec">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spider-man home page</title>
+    <title>Spider-Man home page</title>
 </head>
 <body>
     
